force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__LSW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__LSW_Amount__c</fullName>
    <description>The total value of Lump Sum W payments.</description>
    <inlineHelpText>The total value of Lump Sum W payments.</inlineHelpText>
    <label>Payee Lump Sum Payment W</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>