force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Lump_Sum_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Lump_Sum_Amount__c</fullName>
    <description>The YTD Lump Sum amount for the corresponding Lump Sum Type.</description>
    <inlineHelpText>The YTD Lump Sum amount for the corresponding Lump Sum Type.</inlineHelpText>
    <label>Lump Sum Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>