force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Lump_Sum_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Lump_Sum_Type__c</fullName>
    <description>The Lump Sum Type as defined by the ATO.</description>
    <inlineHelpText>The Lump Sum Type as defined by the ATO.</inlineHelpText>
    <label>Lump Sum Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Lump_Sum_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>