force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Month_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Month_of_Birth__c</fullName>
    <description>Birth Month of the related Payee</description>
    <inlineHelpText>Birth Month of the related Payee</inlineHelpText>
    <label>Payee Month of Birth</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>