force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Negative_Contribution__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Negative_Contribution__c</fullName>
    <description>Negative contribution amounts</description>
    <formula>IF(tc9_eau__Personal_Contribution__c &lt; 0, tc9_eau__Personal_Contribution__c, 0)  +  
	IF(tc9_eau__Child_Contribution__c  &lt; 0, tc9_eau__Child_Contribution__c , 0)  + 
	IF(tc9_eau__Spouse_Contribution__c   &lt; 0, tc9_eau__Spouse_Contribution__c  , 0) + 
	IF(tc9_eau__Third_Party_Contribution__c  &lt; 0, tc9_eau__Third_Party_Contribution__c , 0) +
	IF(tc9_eau__Super_Guarantee__c &lt; 0, tc9_eau__Super_Guarantee__c , 0) +
	IF(tc9_eau__Award_or_Productivity__c &lt; 0, tc9_eau__Award_or_Productivity__c , 0) +
	IF(tc9_eau__Employer_Additional_Super__c &lt; 0, tc9_eau__Employer_Additional_Super__c , 0) +
	IF(tc9_eau__Salary_Sacrifice__c &lt; 0, tc9_eau__Salary_Sacrifice__c , 0) +
	IF(tc9_eau__Voluntary_Additional__c &lt; 0 , tc9_eau__Voluntary_Additional__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negative Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>