force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Net_Contribution__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Net_Contribution__c</fullName>
    <description>Total Superannuation contribution minus negative amount</description>
    <formula>tc9_eau__Total_Contributions__c - tc9_eau__Negative_Contribution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>