force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__OTE_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__OTE_Amount__c</fullName>
    <description>Ordinary Time Earnings</description>
    <inlineHelpText>Ordinary Time Earnings</inlineHelpText>
    <label>OTE Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>