force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Other_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Other_PAYGW_Amount__c</fullName>
    <description>Total Other PAYGW YTD</description>
    <inlineHelpText>Total Other PAYGW YTD</inlineHelpText>
    <label>Payee Other Specified Payments PAYGW Amo</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>