force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Overtime__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Overtime__c</fullName>
    <description>The total value of Overtime.</description>
    <inlineHelpText>The total value of Overtime.</inlineHelpText>
    <label>Overtime</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>