force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Pay_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related pay code</description>
    <label>Pay Code</label>
    <referenceTo>tc9_pr__Pay_Code__c</referenceTo>
    <relationshipLabel>Lodgement Items AU</relationshipLabel>
    <relationshipName>Lodgement_Items_AU</relationshipName>
    <type>Lookup</type>
</CustomField>