force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_CDEP_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_CDEP_Payment_Amount__c</fullName>
    <description>Total CDEP payments YTD</description>
    <inlineHelpText>Total CDEP payments YTD</inlineHelpText>
    <label>Payee CDEP Payment Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>