force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Family_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Family_Name__c</fullName>
    <description>Surname of the related Payee</description>
    <inlineHelpText>Surname of the related Payee</inlineHelpText>
    <label>Payee Family Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>