force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Gross_Payments__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Gross_Payments__c</fullName>
    <description>Total Gross Payments YTD</description>
    <inlineHelpText>Total Gross Payments YTD</inlineHelpText>
    <label>Payee Gross Payments</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>