force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Mobile_Number__c</fullName>
    <description>Mobile number of the related payee</description>
    <inlineHelpText>Mobile number of the related payee</inlineHelpText>
    <label>Payee Mobile Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>