force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Pay_Batch__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Pay_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Payee Pay Batch</description>
    <inlineHelpText>The related Payee Pay Batch</inlineHelpText>
    <label>Payee Pay Batch</label>
    <referenceTo>tc9_pr__Pay_Batch_Item__c</referenceTo>
    <relationshipName>Single_Touch_Payroll_Items</relationshipName>
    <type>Lookup</type>
</CustomField>