force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_PAYGW_Amount__c</fullName>
    <description>The YTD PAYGW amount including any voluntary PAYG Deductions.  This does not include Foreign Employment tax paid.</description>
    <inlineHelpText>The YTD PAYGW amount including any voluntary PAYG Deductions.  This does not include Foreign Employment tax paid.</inlineHelpText>
    <label>Payee PAYGW Amount</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>