force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Payroll_ID__c</fullName>
    <description>Payroll Id of the related Payee</description>
    <inlineHelpText>Payroll Id of the related Payee</inlineHelpText>
    <label>Payee Payroll ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>