force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Preferred_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Preferred_Email_Address__c</fullName>
    <description>The email address that the payee has nominated as their Pay Advice Email Address</description>
    <inlineHelpText>The email address that the payee has nominated as their Pay Advice Email Address</inlineHelpText>
    <label>Payee Preferred Email Address</label>
    <type>Email</type>
</CustomField>