force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_TFN__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_TFN__c</fullName>
    <description>TFN of the related Payee</description>
    <inlineHelpText>SSN of the related Payee</inlineHelpText>
    <label>Payee TFN</label>
    <length>9</length>
    <type>Text</type>
</CustomField>