force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Total_Gross__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Total_Gross__c</fullName>
    <description>Payee YTD Total reportable gross pay</description>
    <formula>IF(tc9_eau__Lodgement_AU__r.tc9_eau__STP_Phase_2_Report__c = False,
tc9_eau__Payee_CDEP_Payment_Amount__c + tc9_eau__Payee_Gross_Payments__c + tc9_eau__FE_Gross_Payment__c + tc9_eau__LH_Gross_Payment__c + tc9_eau__JPDA_FEI_Gross_Amount__c + tc9_eau__Other_Gross_Payments__c + tc9_eau__VA_Gross_Payment__c + tc9_eau__WHM_Gross_Payment__c,
tc9_eau__Payments_Taxable__c + tc9_eau__Allowances_Taxable__c + tc9_eau__ETPs_Taxable__c + tc9_eau__Lump_Sums_Taxable__c - tc9_eau__Deductions_Pre_tax__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payee YTD Total reportable gross pay</inlineHelpText>
    <label>Payee Total Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>