force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Total_PAYGW__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Total_PAYGW__c</fullName>
    <description>Payee YTD PAYG Withheld</description>
    <formula>If ( tc9_eau__Lodgement_AU__r.tc9_eau__STP_Phase_2_Report__c = False ,
tc9_eau__Other_PAYGW_Amount__c + tc9_eau__ETP_PAYGW_Amount__c + tc9_eau__JPDA_FEI_PAYGW_Amount__c + tc9_eau__FE_Total_PAYGW_Amount__c + tc9_eau__Total_INB_PAYGW_Amount__c + tc9_eau__LHire_PAYGW_Amount__c + tc9_eau__VA_PAYGW_Amount__c + tc9_eau__WHM_PAYGW_Amount__c ,
tc9_eau__Payee_PAYGW_Amount__c + tc9_eau__FE_Total_PAYGW_Amount__c + tc9_eau__ETP_PAYGW_Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payee YTD PAYG Withheld</inlineHelpText>
    <label>Payee Total PAYGW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>