force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payee_Withholding__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payee_Withholding__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related payee withholding</description>
    <inlineHelpText>The related payee withholding</inlineHelpText>
    <label>Payee Withholding</label>
    <referenceTo>tc9_pr__Payee_Withholding__c</referenceTo>
    <relationshipLabel>Lodgement Items AU</relationshipLabel>
    <relationshipName>Single_Touch_Payroll_Items</relationshipName>
    <type>Lookup</type>
</CustomField>