force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payroll_Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payroll_Tax_Classification__c</fullName>
    <description>The relevant classification of this item for payroll tax reporting</description>
    <label>Payroll Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Allowance</fullName>
            </value>
            <value>
                <fullName>ETP</fullName>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
            <value>
                <fullName>Employer Super</fullName>
            </value>
            <value>
                <fullName>Salary Sacrifice Super</fullName>
            </value>
            <value>
                <fullName>Member Voluntary Super</fullName>
            </value>
            <value>
                <fullName>Pre-tax Deduction</fullName>
            </value>
            <value>
                <fullName>Directors Fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>