force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payroll_Tax_Due__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payroll_Tax_Due__c</fullName>
    <description>The amount of payroll tax due based on the applicable reportable items</description>
    <inlineHelpText>The amount of payroll tax due based on the applicable reportable items</inlineHelpText>
    <label>Payroll Tax Due</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>