force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payroll_Tax_Percentage__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payroll_Tax_Percentage__c</fullName>
    <description>Percentage of the locality-specific payroll tax rate</description>
    <inlineHelpText>Percentage of the locality-specific payroll tax rate</inlineHelpText>
    <label>Payroll Tax Percentage</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>