force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payroll_Tax_Reporting_Period__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payroll_Tax_Reporting_Period__c</fullName>
    <description>Description of the payroll tax reporting period</description>
    <label>Payroll Tax Reporting Period</label>
    <length>100</length>
    <type>Text</type>
</CustomField>