force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Payroll_Tax_Wages_Reportable__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Payroll_Tax_Wages_Reportable__c</fullName>
    <description>Indicates how these earnings should be reported</description>
    <label>Payroll Tax Wages Reportable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reportable</fullName>
            </value>
            <value>
                <fullName>Non Reportable</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>