force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Period_PAYGW_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Period_PAYGW_Amount__c</fullName>
    <description>Period PAYG Amount</description>
    <inlineHelpText>Period PAYG Amount</inlineHelpText>
    <label>Period PAYGW Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>