force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Period_Start_Date__c</fullName>
    <description>Calendar Period Start Date of the Pay Batch</description>
    <inlineHelpText>Calendar Period Start Date of the Pay Batch</inlineHelpText>
    <label>Period Start Date</label>
    <type>Date</type>
</CustomField>