force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Period_Total_Gross__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Period_Total_Gross__c</fullName>
    <description>Period Total Gross</description>
    <inlineHelpText>Period Total Gross</inlineHelpText>
    <label>Period Total Gross</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>