force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Phone_Number__c</fullName>
    <description>Phone number of the related Payee</description>
    <inlineHelpText>Phone number of the related Payee</inlineHelpText>
    <label>Payee Phone Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>