force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Phone_Type__c</fullName>
    <label>Phone Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>