force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Postcode__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Postcode__c</fullName>
    <description>Postcode of the related Payee</description>
    <inlineHelpText>Postcode of the related Payee</inlineHelpText>
    <label>Payee Postcode</label>
    <length>4</length>
    <type>Text</type>
</CustomField>