force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Previous_Payee_Payroll_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Previous_Payee_Payroll_Id__c</fullName>
    <description>The Payroll Id of this payee in the previous payroll system.</description>
    <inlineHelpText>The Payroll Id of this payee in the previous payroll system.</inlineHelpText>
    <label>Previous Payee Payroll Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>