force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Reportable_FBT__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Reportable_FBT__c</fullName>
    <label>Reportable FBT</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>