force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Request_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Request_Id__c</fullName>
    <description>Unique identifier for the request sent to the ATO during the STP process. Used for polling the response from ATO</description>
    <inlineHelpText>Unique identifier for the request sent to the ATO during the STP process. Used for polling the response from ATO</inlineHelpText>
    <label>Request Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>