force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__RESC_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__RESC_Amount__c</fullName>
    <description>Total RESC</description>
    <inlineHelpText>Total RESC</inlineHelpText>
    <label>Reportable Employer Super Contribution</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>