force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Residency_Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Residency_Status__c</fullName>
    <description>Payee Residency</description>
    <inlineHelpText>Payee Residency</inlineHelpText>
    <label>Payee Residency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
            <value>
                <fullName>Working Holiday Maker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>