force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__RFB_Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__RFB_Taxable_Amount__c</fullName>
    <description>RFBA Taxable YTD</description>
    <inlineHelpText>RFBA Taxable YTD</inlineHelpText>
    <label>Payee RFB Taxable Amount</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>