force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__SFSS_Indicator__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__SFSS_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payee Withholding SFSSIndicator</description>
    <inlineHelpText>Payee Withholding SFSS Indicator</inlineHelpText>
    <label>SFSS Indicator</label>
    <type>Checkbox</type>
</CustomField>