force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Single_Touch_Payroll_Manager__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Single_Touch_Payroll_Manager__c</fullName>
    <formula>If ( tc9_eau__Lodgement_AU__c != null , tc9_eau__Lodgement_AU__r.tc9_eau__Lodgement_Manager__c , null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lodgement Manager</label>
    <type>Text</type>
</CustomField>