force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__State__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__State__c</fullName>
    <description>State/Territory of the related Payee</description>
    <inlineHelpText>State/Territory of the related Payee</inlineHelpText>
    <label>Payee State/Territory</label>
    <length>3</length>
    <type>Text</type>
</CustomField>