force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Status__c</fullName>
    <description>Process status of this record</description>
    <inlineHelpText>Process status of this record</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Validation_Failed</fullName>
                <label>Validation Failed</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>