force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__STP2_Reportable_Earnings__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP2_Reportable_Earnings__c</fullName>
    <description>The reportable values of amounts paid to payees that are not separately reported as allowances. The following fields are summed to generate this value: Payee Gross Payments; Overtime; Bonus and Commission; Total Paid Leave; Directors Fees; Payee CDEP Amount; Exempt Foreign Income Amount; Lump Sums - Taxable; Lump Sums - Non Taxable; ETPs - Taxable + ETPs - Non Taxable</description>
    <formula>tc9_eau__Payee_Gross_Payments__c + tc9_eau__Overtime__c + tc9_eau__Bonus_and_Commission__c + tc9_eau__Total_Paid_Leave__c + tc9_eau__Directors_Fees__c + tc9_eau__Payee_CDEP_Payment_Amount__c + tc9_eau__Exempt_Foreign_Income_Amount__c + tc9_eau__Lump_Sums_Taxable__c + tc9_eau__Lump_Sums_Non_Taxable__c + tc9_eau__ETPs_Taxable__c + tc9_eau__ETPs_Non_Taxable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The reportable values of amounts paid to payees that are not separately reported as allowances. The following fields are summed to generate this value: Payee Gross Payments; Overtime; Bonus and Commission; Total Paid Leave; Directors Fees; Payee CDEP Amount; Exempt Foreign Income Amount; Lump Sums - Taxable; Lump Sums - Non Taxable; ETPs - Taxable + ETPs - Non Taxable</inlineHelpText>
    <label>STP2 Reportable Earnings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>