force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__STP_Child_Amount__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Child_Amount__c</fullName>
    <description>A summary of the STP Child Amount</description>
    <formula>If (RecordType.DeveloperName = &apos;STP_Paid_Leave&apos; , tc9_eau__Leave_Amount__c ,
If (RecordType.DeveloperName = &apos;STP_Allowance&apos; , tc9_eau__Allowance_Amount__c ,
If (RecordType.DeveloperName = &apos;STP_Deduction&apos; || RecordType.DeveloperName = &apos;STP_Salary_Sacrifice&apos; , tc9_eau__Deduction_Amount__c ,
If (RecordType.DeveloperName = &apos;STP_Lump_Sum&apos; , tc9_eau__Lump_Sum_Amount__c ,
If (RecordType.DeveloperName = &apos;STP_ETP&apos; , tc9_eau__ETP_Taxable_Amount__c + tc9_eau__ETP_Non_Taxable_Amount__c , 0 ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A summary of the STP Child Amount</inlineHelpText>
    <label>STP Child Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>