force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__STP_Child_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Child_Type__c</fullName>
    <description>A summary of the STP Child Type</description>
    <formula>If (RecordType.DeveloperName = &apos;STP_Paid_Leave&apos; , TEXT(tc9_eau__Leave_Type__c) ,
If (RecordType.DeveloperName = &apos;STP_Allowance&apos; , TEXT(tc9_eau__Allowance_Type__c) + If (tc9_eau__Allowance_Other_Description__c != null , &apos; (&apos; + tc9_eau__Allowance_Other_Description__c +&apos;)&apos; , null ) ,
If (RecordType.DeveloperName = &apos;STP_Deduction&apos; || RecordType.DeveloperName = &apos;STP_Salary_Sacrifice&apos; , TEXT(tc9_eau__STP_Deduction_Type__c) ,
If (RecordType.DeveloperName = &apos;STP_Lump_Sum&apos; , TEXT(tc9_eau__Lump_Sum_Type__c) + If (NOT(ISBLANK(TEXT(tc9_eau__Lump_Sum_A_Type__c))) , TEXT(tc9_eau__Lump_Sum_A_Type__c) , null) ,
If (RecordType.DeveloperName = &apos;STP_ETP&apos; , TEXT(tc9_eau__ETP_Type__c) , null ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A summary of the STP Child Type</inlineHelpText>
    <label>STP Child Type</label>
    <type>Text</type>
</CustomField>