force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__STP_Deduction_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STP_Deduction_Type__c</fullName>
    <label>STP Deduction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__STP2_Deduction_Type_Picklists</valueSetName>
    </valueSet>
</CustomField>