force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__STSL_Indicator__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__STSL_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Payee Withholding STSL Indicator</description>
    <inlineHelpText>Payee Withholding STSL Indicator</inlineHelpText>
    <label>STSL Indicator</label>
    <type>Checkbox</type>
</CustomField>