force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Submission_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Submission_Id__c</fullName>
    <description>Unique identifier submitted to the ATO during the STP process. Used mainly for Full File Replacement event</description>
    <inlineHelpText>Unique identifier submitted to the ATO during the STP process. Used mainly for Full File Replacement event</inlineHelpText>
    <label>Submission Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>