force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Suburb_Town__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Suburb_Town__c</fullName>
    <description>Suburb of the related Payee</description>
    <inlineHelpText>Suburb of the related Payee</inlineHelpText>
    <label>Payee Suburb/Town</label>
    <length>46</length>
    <type>Text</type>
</CustomField>