force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Suffix__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Suffix__c</fullName>
    <description>Payee Suffix</description>
    <inlineHelpText>Payee Suffix</inlineHelpText>
    <label>Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>