force-app/main/default/objects/tc9_eau__Lodgement_Item_AU__c/fields/tc9_eau__Super_Employer_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_eau__Super_Employer_Id__c</fullName>
    <description>The corresponding Employer Id for this combination of Superannuation Fund and Payment Entity.</description>
    <inlineHelpText>The corresponding Employer Id for this combination of Superannuation Fund and Payment Entity.</inlineHelpText>
    <label>Super Employer Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>